samples/_failures_safe/1761714165_585af3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_105763cd.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_105763cd.c:165:12: error: expected ‘,’ or ‘;’ at end of input
  165 |     struct GraphNode *start = NULL
      |            ^~~~~~~~~
./samples/SAFE/__tmp_105763cd.c:165:12: error: expected declaration or statement at end of input
